--- a/exercise1/package.json
+++ b/exercise1/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "offline": "sls offline",
     "build": "tsc",
-    "deploy": "npm run build && serverless deploy",
-    "deploy-customer": "npm run build && serverless deploy function --function createCustomer"
+    "deploy": "npm run build && serverless deploy"
   },
   "devDependencies": {
     "typescript": "^3.8.3"
